--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="app_title">Title</string>
+    <string name="app_content">Content</string>
+
 </resources>
